--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,13 +12,13 @@
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
-            <form action="#">
+            <form action="/todos" method="post">
                 <div class="flex gap-2 py-4">
                     <div class="flex-auto">
-                        <input type="text" placeholder="what's next?" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm" required />
+                        <input type="text" name="title" placeholder="what's next?" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm" required />
                     </div>
                     <div class="flex-auto">
-                        <input type="date" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm leading-4" />
+                        <input type="date" name="dueDate" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm leading-4" />
                     </div>
                     <div class="flex-none">
                         <button type="submit" class="bg-green-600 text-white px-5 py-2 rounded font-medium mr-2 mb-2 py-1.5">Add</button>
