--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>To-Do manager</title>
+    <script>
+        function updateTodo(id) {
+            fetch(`/todos/${id}/markAsCompleted`, {
+                method: "put",
+                headers: { "Content-Type": "application/json" },
+            })
+            .then((res) => {
+                if(res.ok) {
+                    window.location.reload();
+                }
+            })
+            .catch((errr) => console.error(err));
+        }
+        function deleteTodo(id) {
+            fetch(`/todos/${id}`, {
+                method: "delete",
+                headers: { "Content-Type": "application/json" },
+            })
+            .then((res) => {
+                if(res.ok) {
+                    window.location.reload();
+                }
+            })
+            .catch((errr) => console.error(err));
+        }
+    </script>
 </head>
 <body>
     <body>
