--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -53,7 +53,7 @@
             <div class="col-start-3 col-span-2">
                 <%- include('header.ejs') %>
                 <p class="text-gray-600 my-1">Hello <%= userName %></p>
-                <a href="/signout">Sign out</a>
+                <button><a href="/signout">Sign out</a></button>
                 <form action="/todos" method="post">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
                     <div class="flex gap-2 py-4">
