--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -41,7 +41,7 @@
                 <label for="password">Password:</label>
                 <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded py-2 w-full">
             </div>
-                <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Sign up</button>
+                <button type="submit" class="text-white bg-black font-medium rounded px-5 py-2">Sign up</button>
 
             </form>
         </div>
