--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -53,7 +53,9 @@
             <div class="col-start-3 col-span-2">
                 <%- include('header.ejs') %>
                 <p class="text-gray-600 my-1">Hello <%= userName %></p>
-                <button><a href="/signout">Sign out</a></button>
+                <div class="flex-none">
+                    <button class="bg-black text-white px-5 py-1.5 rounded font-medium mr-2 mb-2"><a href="/signout">Sign Out</a></button>
+                </div>
                 <form action="/todos" method="post">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
                     <div class="flex gap-2 py-4">
@@ -64,7 +66,7 @@
                             <input type="date" name="dueDate" class="border border-gray-300 rounded w-full text-gray-900 p-2 text-sm leading-4" />
                         </div>
                         <div class="flex-none">
-                            <button type="submit" class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">Add</button>
+                            <button type="submit" class="bg-black text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">Add</button>
                         </div>
                     </div>
                 </form>
