--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -51,7 +51,7 @@
     <body>
         <div class="grid grid-cols-6">
             <div class="col-start-3 col-span-2">
-                <%- include('header.ejs') %>
+                <h1 class="text-2xl font-semibold text-gray-600"> My Todo List </h1>
                 <p class="text-gray-600 my-1">Hello <%= userName %></p>
                 <div class="flex-none">
                     <button class="bg-black text-white px-5 py-1.5 rounded font-medium mr-2 mb-2"><a href="/signout">Sign Out</a></button>
