--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,6 +34,14 @@
                 <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded py-2 w-full">
             </div>
                 <button type="submit" class="text-white bg-black font-medium rounded px-5 py-2">Sign in</button>
+                <p class="text-sm font-semibold mt-2 pt-1 mb-0">
+                    Don't have an account?
+                    <a
+                      href="/signup"
+                      class="text-red-600 hover:text-red-700 focus:text-red-700 transition duration-200 ease-in-out"
+                      >Register</a
+                    >
+                  </p>
 
             </form>
         </div>
